# AppliedAI

./: AI-apple-metal.yml  main.html
lecture_4/numpy_and_pandas/: pyproject.toml  requirements.txt
lectures/#tensorflow_test/: tensortest.ipynb  testrun.ipynb
lectures/Chapter_8_eTe_Classification_Example/: ML_Classification_eTe.ipynb
lectures/Classic_Regression_and_Classification/: README.ipynb  justreadme.ipynb
lectures/Mandatory_2/: test.ipynb
lectures/chapter_4_numpy_and_pandas/: TestBook.ipynb  data_report.ipynb  export.py  test.ipynb  titanic-report.html
lectures/chapter_5_plots/: plots.ipynb
lectures/chapter_6_descriptive_statistics/: DStat_example.ipynb  example.ipynb
lectures/chapter_7/: ML_example_eTe.ipynb
lectures/clean_learning_python/: pyproject.toml
lectures/clean_learning_python/chapters/Supervised_Learning/Chapter_17/: leaf_node_question.md
lectures/clean_learning_python/chapters/chapter_4_numpy_and_pandas/: TestBook.ipynb  main.ipy
lectures/clean_learning_python/chapters/chapter_5_plots/: plots.ipynb
lectures/clean_learning_python/chapters/chapter_9/assignment_10/: DESCRIPTION.md
lectures/clean_learning_python/chapters/chapter_9/assignment_11/: DESCRIPTION.md
lectures/clean_learning_python/chapters/chapter_9/assignment_7/: DESCRIPTION.md
lectures/clean_learning_python/chapters/chapter_9/assignment_9/: DESCRIPTION.md
lectures/learning_python/: pyproject.toml
lectures/learning_python/chapters/chapter_10/: Predict_XOR.ipynb
lectures/learning_python/chapters/chapter_5_plots/: plots.ipynb
(+15 files in other folders)
