[tool.poetry]
name = "clean-learning-python"
version = "0.1.0"
description = ""
authors = ["Archit3ct <timothy.s.rasmussen@gmail.com>"]
readme = "README.md"
packages = [{include = "clean_learning_python"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
